--- a/app/src/main/res/layout/activity_add_remainder.xml
+++ b/app/src/main/res/layout/activity_add_remainder.xml
@@ -5,41 +5,69 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/blue_border"
     tools:context=".AddRemainderActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/addHeader"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/border_bottom"
+        android:backgroundTint="@color/blue"
+        android:paddingTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/main_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fraunces_bold"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/addBackButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/main_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.416"
+            app:srcCompat="@drawable/back1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/repeatEditText"
-        android:layout_width="335dp"
-        android:layout_height="54dp"
+        android:layout_width="110dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="36dp"
         android:background="@drawable/blue_border"
         android:gravity="top"
-        android:hint="Enter Repeat"
+        android:hint="Repeat"
         android:paddingLeft="25dp"
         android:paddingTop="14dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeEditText" />
+        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintStart_toEndOf="@+id/dateEditText"
+        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
 
     <TextView
-        android:id="@+id/addRemainder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/fraunces_bold"
-        android:text="Add Remainder"
-        android:textColor="@color/blue"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/timeEditText"
-        android:layout_width="335dp"
-        android:layout_height="54dp"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/blue_border"
         android:gravity="top"
@@ -48,13 +76,27 @@
         android:paddingTop="14dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
 
-    <EditText
+    <Spinner
+        android:id="@+id/meridianSpinner"
+        android:layout_width="110dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="36dp"
+        android:background="@drawable/blue_border"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintStart_toEndOf="@+id/timeEditText"
+        app:layout_constraintTop_toBottomOf="@+id/repeatEditText" />
+
+    <TextView
         android:id="@+id/dateEditText"
-        android:layout_width="335dp"
-        android:layout_height="54dp"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/blue_border"
         android:gravity="top"
@@ -63,14 +105,15 @@
         android:paddingTop="14dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
 
     <EditText
         android:id="@+id/titleEditText"
         android:layout_width="335dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="36dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/blue_border"
         android:gravity="top"
         android:hint="Enter Title"
@@ -79,43 +122,67 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addRemainder" />
+        app:layout_constraintTop_toBottomOf="@+id/addHeader" />
 
     <EditText
         android:id="@+id/contentEditText"
         android:layout_width="335dp"
         android:layout_height="250dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/blue_border"
         android:gravity="top"
         android:hint="Enter Content"
-        android:paddingLeft="25dp"
+        android:paddingHorizontal="25dp"
         android:paddingTop="14dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repeatEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/timeEditText" />
 
     <ImageView
         android:id="@+id/saveButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contentEditText"
+        app:layout_constraintHorizontal_bias="0.414"
+        app:layout_constraintStart_toEndOf="@+id/save"
+        app:layout_constraintTop_toBottomOf="@+id/addHeader"
         app:srcCompat="@drawable/done" />
 
     <Switch
         android:id="@+id/activeEditStatus"
         android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="20dp"
+        android:layout_marginEnd="232dp"
+        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.269"
+        app:layout_constraintStart_toEndOf="@+id/active"
+        app:layout_constraintTop_toBottomOf="@+id/addHeader" />
+
+    <TextView
+        android:id="@+id/active"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Active"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contentEditText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/addHeader" />
+
+    <TextView
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.576"
+        app:layout_constraintStart_toEndOf="@+id/activeEditStatus"
+        app:layout_constraintTop_toBottomOf="@+id/addHeader" />
 </androidx.constraintlayout.widget.ConstraintLayout>
