--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,7 +58,7 @@
         android:id="@+id/addButton"
         android:outlineAmbientShadowColor="@color/white"
         app:backgroundTint="@color/blue"
-        app:icon="@drawable/resized_add"
+        app:icon="@drawable/add"
         app:iconPadding="0dp"
         app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +66,8 @@
         app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.917" />
+        app:layout_constraintVertical_bias="0.917"
+        android:layout_height="50dp"
+        android:layout_width="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
