--- a/app/src/main/res/layout/activity_add_remainder.xml
+++ b/app/src/main/res/layout/activity_add_remainder.xml
@@ -47,20 +47,14 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <EditText
+    <NumberPicker
         android:id="@+id/repeatEditText"
         android:layout_width="110dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="36dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/blue_border"
-        android:gravity="top"
-        android:hint="Repeat"
-        android:paddingLeft="25dp"
-        android:paddingTop="14dp"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintHorizontal_bias="0.396"
         app:layout_constraintStart_toEndOf="@+id/dateEditText"
         app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
 
